fix LoginPage inputs z-index on click

--- a/src/main/resources/src/components/Authorization/LoginPage/LoginPage.scss
+++ b/src/main/resources/src/components/Authorization/LoginPage/LoginPage.scss
@@ -79,6 +79,7 @@
     align-items: center;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.22), 0 0px 5px rgba(0, 0, 0, 0.24);
     background-color: rgba(#ffffff, 1);
+    z-index: 0;
 
     // dark-theme
     // background-color: rgba(#333333, 0.7);
@@ -95,6 +96,7 @@
       transition: 200ms ease-in-out;
       color: #666666;
       padding: 0;
+      z-index: -1;
 
       &--focused {
         top: 4px;
@@ -102,6 +104,7 @@
         background-color: rgba(#ffffff, 1);
         font-size: 0.8rem;
         padding: 0 5px;
+        z-index: 0;
       }
     }
 
@@ -112,6 +115,7 @@
       --padding-left: 35px;
       margin-bottom: 5px;
       margin-top: 5px;
+      background-color: transparent;
 
       //test
       padding-top: 15px;
@@ -130,6 +134,7 @@
         padding: 10px 10px;
         border-radius: 5px;
         padding-left: var(--padding-left);
+        background-color: transparent;
         
 
         //dark-theme
@@ -292,7 +297,7 @@
         padding: 10px 15px;
 
         .authorization__submit {
-          max-width: 200px;
+          // max-width: 200px;
         }
       }
     }
